Fixed spacing issues, reworded intro

--- a/main.css
+++ b/main.css
@@ -124,7 +124,7 @@ header li{
 	flex-flow: column;
 	/* height: 100%; */
 }
-.content p{
+.content p, .content ul{
 	padding-bottom:5%;
 }
 #projects h2{
@@ -181,7 +181,8 @@ header li{
 	opacity: 1;
 }
 .content:not(#intro, #face-container, #face-overlay, #projects, #showcase){
-	padding: 10%;
+	padding-right: 10%;
+	padding-left: 10%;
 	font-size: 1.1vw;
 }
 .content h2:not(#projects *){
@@ -205,12 +206,23 @@ header li{
 	padding-top:10%;
 	font-size: 1.4vw;
 }
+#about-me{
+	padding-top:7%;
+	padding-bottom:7%;
+	padding-right:0%;
+}
+
 #face-container{
 	position:relative;
 	margin-right:3%;
 	width:40%;
 	height:auto;
 	float:left;
+}
+#biographic{
+	width:55%;
+	float:left;
+	display:block;
 }
 #face-container img{
 	/* filter: saturate(0%); */
